# fiducial_landing

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: SP_node.h
launch/: pain.launch
serial/: SP_node.cpp
src/: pose_estimator_node.cpp  traj_test.cpp  trajectory_generation_node.cpp
